--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,3 +167,16 @@ img { max-width: 100%; }
 	h1, h2 { font-size: 32px; }
 
 }
+
+
+/*----- pie chart ----- */
+body {
+    font-family: "tee_franklin_light", 'Source Sans Pro', "Helvetica Neue", Helvetica, "Open Sans", Arial, sans-serif;
+}
+
+polyline {
+    opacity: .3;
+    stroke: black;
+    stroke-width: 2px;
+    fill: none;
+}
