button labels updated

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -46,9 +46,9 @@
             <div class="col-md-12" style="text-align:center">               
                 <div class="pie" style="height:450px;"></div>                
             </div>
-            <button class="show_zone btn btn-primary">Show Zone</button>
-            <button class="show_state btn btn-primary">Show State</button>
-            <button class="show_city btn btn-primary">Show City</button>
+            <button class="show_zone btn btn-primary">Show All Zone</button>
+            <button class="show_state btn btn-primary">Show All State</button>
+            <button class="show_city btn btn-primary">Show All City</button>
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
